<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/scheduleFragment"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/nav_calendar" />
    <item
        android:id="@+id/favoritesFragment"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/nav_favorites" />
    <item
        android:id="@+id/notificationsFragment"
        android:icon="@android:drawable/ic_popup_reminder"
        android:title="@string/nav_notifications" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>
