<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.practicum.taskmanager.ui.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_login_to_signup"
            app:destination="@id/signUpFragment" />
    </fragment>

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.practicum.taskmanager.ui.SignUpFragment"
        android:label="@string/signup"
        tools:layout="@layout/fragment_signup">
        <action
            android:id="@+id/action_signup_to_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.practicum.taskmanager.ui.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_taskDetail"
            app:destination="@id/taskDetailFragment" />
        <action
            android:id="@+id/action_home_to_notifications"
            app:destination="@id/notificationsFragment" />
    </fragment>

    <fragment
        android:id="@+id/scheduleFragment"
        android:name="com.practicum.taskmanager.ui.ScheduleFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_schedule">
        <action
            android:id="@+id/action_schedule_to_taskDetail"
            app:destination="@id/taskDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/favoritesFragment"
        android:name="com.practicum.taskmanager.ui.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites">
        <action
            android:id="@+id/action_favorites_to_taskDetail"
            app:destination="@id/taskDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.practicum.taskmanager.ui.NotificationsFragment"
        android:label="@string/notifications"
        tools:layout="@layout/fragment_notifications">
        <action
            android:id="@+id/action_notifications_to_taskDetail"
            app:destination="@id/taskDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.practicum.taskmanager.ui.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profile_to_settings"
            app:destination="@id/settingsFragment" />
        <action
            android:id="@+id/action_profile_to_help"
            app:destination="@id/helpFragment" />
        <action
            android:id="@+id/action_profile_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/taskDetailFragment"
        android:name="com.practicum.taskmanager.ui.TaskDetailFragment"
        android:label="@string/new_task"
        tools:layout="@layout/fragment_task_detail">
        <argument
            android:name="taskId"
            app:argType="string"
            android:defaultValue="new" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.practicum.taskmanager.ui.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/helpFragment"
        android:name="com.practicum.taskmanager.ui.HelpFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_help" />
</navigation>
